basic startup task is completed

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
 
   <!-- Main styles for this application -->
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/app.css" rel="stylesheet">
   <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  
   <link href="node_modules/font-awesome/css/font-awesome.css" rel="stylesheet">
   <link href="node_modules/angular-ui-grid/ui-grid.min.css" rel="stylesheet">
   <link href="node_modules/angular-xeditable/dist/css/xeditable.min.css" rel="stylesheet">
@@ -36,6 +38,7 @@
   <!-- Bootstrap and necessary plugins -->
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+  <script src="node_modules/tether/dist/js/tether.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="node_modules/lodash/index.js"></script>
 
@@ -63,10 +66,19 @@
   <script src="js/app/api/api.base.js"></script>
   <script src="js/app/api/api.users.js"></script>
   <script src="js/app/api/api.roles.js"></script>
+  <script src="js/app/api/api.permissions.js"></script>
+  <script src="js/app/api/api.userroles.js"></script>
+  <script src="js/app/api/api.permissionroles.js"></script>
   <script src="js/app/security/authentication.js"></script>
   <script src="js/app/accessControl/user/userList.js"></script>
   <script src="js/app/accessControl/user/userCreate.js"></script>
   <script src="js/app/accessControl/user/userDetail.js"></script>
+  <script src="js/app/accessControl/role/roleList.js"></script>
+  <script src="js/app/accessControl/role/roleCreate.js"></script>
+  <script src="js/app/accessControl/role/roleDetail.js"></script>
+  <script src="js/app/accessControl/permission/permissionList.js"></script>
+  <script src="js/app/accessControl/permission/permissionCreate.js"></script>
+  <script src="js/app/accessControl/permission/permissionDetail.js"></script>
 
   <script src="js/app/app.js"></script>
 
