--- a/src/js/app/accessControl/user/userList.tpl.html
+++ b/src/js/app/accessControl/user/userList.tpl.html
@@ -18,11 +18,12 @@
         <hr/>
         <div class="row" >
           <div class="col-md-6 pull-left">
-              <button type="button" class="col-md-6 btn btn-success" ng-click="searchUser();"><i class="fa fa-dot-circle-o"></i> Search</button>
-              <button type="button" class="col-md-5 btn btn-default" ng-click="resetSearch();"><i class="fa fa-ban"></i> Reset</button>              
+              <button type="button" class="col-md-6 btn btn-success" ng-click="searchUser();"><i class="fa fa-search"></i> Search</button>
+              <button type="button" class="col-md-5 btn btn-default" ng-click="resetSearch();"><i class="fa fa-refresh"></i> Reset</button>              
           </div>
           <div class="col-md-6">
-            <button type="button" class="col-md-4 btn btn-success pull-right" style="float: right;" ng-click="gotoCreateUser();"><i class="fa fa-ban"></i> Add User</button>
+            <button type="button" class="col-md-4 btn btn-success pull-right" style="float: right;" ng-click="gotoCreateUser();">
+              <i class="fa fa-plus"></i> Add User</button>
           </div>
         </div>
         <hr/>
