--- a/src/js/app/accessControl/user/userCreate.tpl.html
+++ b/src/js/app/accessControl/user/userCreate.tpl.html
@@ -56,10 +56,12 @@
               <div class="row form-group"> 
                 <div class="offset-md-2"></div>
                 <div class="col-md-3">
-                    <button type="button" ng-click="gotoUserListScreen();" class="form-control btn-defaul"> Cancel </button>
+                    <button type="button" ng-click="gotoUserListScreen();" class="form-control btn-defaul"> 
+                        <i class="fa fa-reply"></i>
+                        Cancel </button>
                 </div>
                 <div class="col-md-3">
-                    <button type="submit" class="form-control btn-success"> Save </button>
+                    <button type="submit" class="form-control btn-success"> <i class="fa fa-save"></i> Save </button>
                 </div>
               </div>
             </form>
