--- a/src/js/app/accessControl/user/userDetail.tpl.html
+++ b/src/js/app/accessControl/user/userDetail.tpl.html
@@ -77,11 +77,15 @@
                   <div class="row form-group">
                       <label class="col-md-3 control-label pull-right" for="roles">Roles :</label> 
                       <div class="col-md-5">
-                        <select class="form-control" ng-model="user.role" ng-options="role.id as role.name for role in roles" >
+                        <select class="form-control no-border" ng-model="user.role" ng-options="role as role.name for role in roles" >
                             <option></option>
                         </select>
                       </div>
+                      <div class="col-md-2">
+                        <button ng-click="addRole(user.role)" class="btn btn-sm"> <span class="fa fa-save"></span> </button>
+                      </div>
                   </div>
+                  <hr />
                   <div class="row form-group">
                     <div class="col-md-12">
                       <table class="table table-bordered">
@@ -91,7 +95,7 @@
                         </tr>
                         <tr ng-repeat="role in user.roles">
                           <td>{{role.name}}</td>
-                          <td><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="glyphicon glyphicon-envelope"></span></td>
+                          <td><span class="fa fa-trash" ng-click="deleteRole(role);"></span></td>
                         </tr>
                       </table>
                     </div>
