--- a/src/js/app/security/login.tpl.html
+++ b/src/js/app/security/login.tpl.html
@@ -1,8 +1,17 @@
-<div class="app flex-row align-items-center" ng-controller="AuthenticationCtrl">
+<div class=" flex-row align-items-center" ng-controller="AuthenticationCtrl">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-md-8">
+      <div class="col-md-12">
         <div class="card-group">
+          <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
+            <div class="card-body text-center">
+              <div>
+                <h2>Welcome</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                
+              </div>
+            </div>
+          </div> 
           <div class="card p-4">
             <div class="card-body">
               <h1>Login</h1>
@@ -25,15 +34,6 @@
               </div>
             </div>
           </div>
-          <!-- <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
-            <div class="card-body text-center">
-              <div>
-                <h2>Sign up</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <button type="button" class="btn btn-primary active mt-3">Register Now!</button>
-              </div>
-            </div>
-          </div> -->
         </div>
       </div>
     </div>
